<resources>
    <string name="app_name" translatable="false">opensrp-chw-referral</string>
    <string name="error_unable_to_start_form">An error occurred when starting the form</string>
    <string name="error_unable_to_save_form">An error occurred when saving the form</string>
    <string name="issued_referrals">Referrals Issued</string>
    <string name="followup_referral">Followup Referrals</string>
    <string name="issue_referral">Issue Referrals</string>

    <!-- menu -->
    <string name="add_member">Add Member</string>
    <string name="sort">Sort</string>
    <string name="home">Home</string>
    <string name="add_family">Add family</string>
    <string name="scan_qr">Scan QR</string>
    <string name="job_aids">Job Aids</string>
    <string name="saving_dialog_title">Saving</string>
    <string name="interpunct" translatable="false">\u00b7</string>
    <string name="referral_followup_visit">FOLLOWUP\nVISIT</string>
    <string name="record_followup">Record follow-up</string>
    <string name="return_to_previous">Return all Referral Clients</string>
    <string name="last_visit_40_days_ago">Last visit %1$s ago</string>
    <string name="view_medical_history">View medical history</string>
    <string name="view_upcoming_services">View upcoming services</string>
    <string name="family_has_nothing_due">Family has nothing due</string>
    <string name="go_to_family_s_profile">Go to family\'s profile</string>
    <string name="family_has_services_due">Family has services due</string>
    <string name="primary_care_giver">Primary care giver</string>
    <string name="family_head">FAMILY HEAD</string>
    <string name="family_has_service_overdue"><![CDATA[Family has <font color=#FF0000>services overdue</font></b>]]></string>
    <string name="vaccine_service_upcoming"><![CDATA[%1$s <font color=#7f7f7f>upcoming (%2$s)</font></b>]]></string>
    <string name="vaccine_service_overdue"><![CDATA[%1$s <font color=#f04646>overdue (%2$s)</font></b>]]></string>
    <string name="vaccine_service_due"><![CDATA[%1$s <font color=#000000>due (%2$s)</font></b>]]></string>
    <string name="call_referral_client">Call Referral Client</string>
    <string name="head_of_family">Head of family</string>
    <string name="referral_client">Referral Client</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="copied_phone_number">PhoneNumber copied to clipboard</string>
    <string name="call">Call</string>
    <string name="record_anc">Record ANC visit</string>
    <string name="record_anc_visit_not_done">ANC visit not done</string>
    <string name="action_sent_referrals">Referrals</string>
    <string name="action_received_followup_referrals">Followups</string>


    <string name="referral_status_pending">PENDING</string>
    <string name="referral_status_successful">SUCCESSFUL</string>
    <string name="referral_status_failed">FAILED</string>

    <string name="referral_information">Referral Information</string>
    <string name="referral_details">Referral Details</string>
    <string name="visit_facility">Visit Facility</string>
    <string name="referral_services">Referral Services</string>
    <string name="visit_facility_hint">Enter facility name</string>
    <string name="emergency_referral_title_label">Emergency Referral</string>
    <string name="appointment_date_label">Appointment Date</string>
    <string name="other_info">Other Information</string>
    <string name="referral_reason">Referral Reason</string>
    <string name="danger_signs">Danger Signs</string>
    <string name="button_refer_client">Refer Client</string>

    <string name="issue_new_referral">Issue New Referral</string>
    <string name="view_referral_history">View Referral history</string>

    <string name="followup_feedback">Followup Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="hint_missing_reasons">Please choose a feedback</string>
    <string name="other_followup_feedback_information">Other information e.g condition</string>
    <string name="village_title_label">Village</string>
    <string name="referral_date_label">Referral Date</string>
    <string name="gender">Gender</string>
    <string name="patient_name_age">Patient Name, Age</string>
    <string name="missing_facility">Please fill in the referral facility</string>
    <string name="missing_services">Please fill in the referral service</string>
    <string name="wrong_facility">Please fill in the correct referral facility</string>
    <string name="referral_submitted_successfully">Referral sent to the facility</string>
    <string name="missing_client_condition_during_visit">Please fill in the client condition during the visit</string>
    <string name="missing_feedback">Please select feedback</string>
    <string name="complete">Complete</string>
    <string name="finish">Finish</string>
    <string name="back_to_referrals">Back to referrals</string>
    <string name="phone">Phone</string>
    <string name="problem">Problem</string>
    <string name="referral_date">Referral date</string>
    <string name="chw">CHW</string>
    <string name="chw_phone">CHW Phone</string>
    <string name="phone_not_provided">Phone not provided</string>
    <string name="referral_facility">Referral Facility</string>
    <string name="referral_type">Referral Type</string>
    <string name="pre_referral_management">Pre-referral management given</string>


    <!--Referral Strings -->
    <string name="referral_submitted">Referral sent to facility</string>
    <string name="referral_not_submitted">Referral not submitted; no problems selected for client</string>
    <string name="confirm_form_close">Confirm form close</string>
    <string name="confirm_form_close_explanation">Are you sure you want to go back? All data you have entered in this form will be cleared.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty_value">None</string>
    <string name="save">Save</string>
    <string name="other">Other: %1$s </string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <!--Referral Types -->
    <string name="sick_child">Sick child</string>
    <string name="pnc_danger_signs">PNC danger signs</string>
    <string name="anc_danger_signs">ANC danger signs</string>
    <string name="suspected_malaria">Suspected Malaria</string>
    <string name="fp_initiation">FP Initiation</string>
    <string name="suspected_hiv">HIV Testing Services</string>
    <string name="suspected_tb">TB Clinic</string>
    <string name="suspected_gbv">Gender Based Violence</string>
    <string name="sick_hiv">Clinic of Treatment and Care</string>
    <string name="suspected_child_gbv">Child GBV</string>
    <string name="pregnancy_confirmation">Pregnancy Confirmation</string>
    <string name="anc_male_engagement">ANC Male Engagement</string>
    <string name="pmtct_referral">PMTCT Referral</string>
    <string name="kvp_friendly_services">KVP Friendly Services</string>
    <string name="sti_services">STI Services</string>
    <string name="cecap_referral">Reproductive Cancer Services</string>
    <string name="aysrh_referral">AYSRH Friendly Services</string>
    <string name="reason">Reason</string>
    <string name="addo_linkage_submitted_successfully">Linkage sent to the Addo</string>
    <string name="linkage_submitted">Linkage sent to Addo</string>
    <string name="linkage_not_submitted">Linkage not sent to Addo</string>
    <string name="hello">Linkage not sent to Addo</string>

    <!--Addo Minor Ailments-->
    <string name="child_minor_ailments"> Child Minor Ailments </string>
    <string name="anc_minor_ailments"> ANC Minor Ailments </string>
    <string name="pnc_minor_ailments"> PNC Minor Ailments </string>
    <string name="adolescent_minor_ailments"> Adolescent Minor Ailments </string>

</resources>
