<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:scrollbars="none"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <org.smartregister.view.customcontrols.CustomFontTextView
            style="@style/CustomFontTextViewStyle.ClientList.NoPadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/referral_information"
            android:textColor="@color/text_blue"
            android:textSize="20sp"
            app:fontVariant="medium" />


        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/referral_date"
            style="@style/CustomFontTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="12/12/1999"
            android:textSize="16sp" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/referral_date_title"
            style="@style/CustomFontTextViewStyle.ClientList.Light"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/referral_date_label"
            android:textColor="@color/dark_grey_text"
            android:textSize="14sp" />


        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/followUp_reason"
            style="@style/CustomFontTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="Referral Reason"
            android:textSize="16sp" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/sababu_ya_rufaa_title"
            style="@style/CustomFontTextViewStyle.ClientList.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/referral_reason"
            android:textColor="@color/dark_grey_text"
            android:textSize="14sp" />


        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/referer_name_value"
            style="@style/CustomFontTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/referer_name_title"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="Chw One"
            android:textSize="16sp" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/referer_name_title"
            style="@style/CustomFontTextViewStyle.ClientList.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="Referral Issued by"
            android:textColor="@color/dark_grey_text"
            android:textSize="14sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="32dp"
            android:background="@color/me_page_line_separator" />


        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/feedback_title"
            style="@style/CustomFontTextViewStyle.ClientList.NoPadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/followup_feedback"
            android:textColor="@color/text_blue"
            android:textSize="20sp"
            app:fontVariant="medium" />


        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/service_offered_title"
            style="@style/CustomFontTextViewStyle"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:paddingStart="0dp"
            android:visibility="gone"
            android:paddingEnd="0dp"
            android:text="@string/feedback" />


        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spinnerClientAvailable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:ms_alignLabels="false"
            app:ms_arrowSize="16dp"
            app:ms_enableErrorLabel="false"
            app:ms_floatingLabelColor="@color/dark_grey_text"
            app:ms_hintView="@layout/hint_layout"
            app:ms_enableFloatingLabel="true"
            app:ms_alwaysShowFloatingLabel="true"
            android:layout_marginTop="16dp"
            app:ms_floatingLabelText="@string/feedback"
            app:ms_hint="@string/hint_missing_reasons"
            app:ms_multiline="false"
            app:ms_thickness="0dp" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/service_advice_title"
            style="@style/CustomFontTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:textColor="@color/dark_grey_text"
            android:text="@string/other_followup_feedback_information"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/client_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:gravity="start"
            android:hint="Fill other information if available"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:textSize="16sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/save"
                android:backgroundTint="@color/text_blue"
                android:textColor="@color/white" />


        </RelativeLayout>

    </LinearLayout>

</ScrollView>