<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingTop="16dp"
        android:background="@color/white"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/referral_date"
            style="@style/CustomFontTextViewStyle.ClientList.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="18th November 2019"
            android:textColor="@color/text_blue"
            android:textStyle="bold" />

        <View
            android:layout_width="60dp"
            android:layout_height="3dp"
            android:layout_below="@id/referral_date"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:background="@color/me_page_line_separator" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/service_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/referral_services"
            android:textColor="@color/text_blue"
            android:textSize="14sp"
            android:visibility="gone" />

        <View
            android:id="@+id/divider_one"
            android:layout_width="60dp"
            android:layout_height="3dp"
            android:layout_below="@id/service_title"
            android:layout_marginTop="8dp"
            android:background="@color/me_page_line_separator"
            android:visibility="gone" />


        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/facility_titleview"
            style="@style/CustomFontTextViewStyle.ClientList.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/visit_facility"
            android:textColor="@color/text_blue" />

        <View
            android:id="@+id/strip_five"
            android:layout_width="60dp"
            android:layout_height="3dp"
            android:layout_below="@id/facility_titleview"
            android:layout_marginTop="8dp"
            android:background="@color/me_page_line_separator" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/facility_name"
            style="@style/CustomFontTextViewStyle.ClientList.NoPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/strip_five"
            android:ems="10"
            android:text="Berega Hospital"
            android:textSize="14sp" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/flags_title"
            style="@style/CustomFontTextViewStyle.ClientList.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/facility_name"
            android:layout_marginTop="8dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/danger_signs"
            android:textColor="@color/text_blue"
            android:textSize="14sp" />

        <View
            android:id="@+id/strip_four"
            android:layout_width="60dp"
            android:layout_height="3dp"
            android:layout_below="@id/flags_title"
            android:layout_marginTop="8dp"
            android:background="@color/me_page_line_separator" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/indicators"
            style="@style/CustomFontTextViewStyle.ClientList.Light.twoline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:layout_below="@id/strip_four"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:orientation="vertical" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/clinical_information_title"
            style="@style/CustomFontTextViewStyle.ClientList.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/indicators"
            android:layout_marginTop="8dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/other_info"
            android:textColor="@color/text_blue"
            android:textSize="14sp" />

        <View
            android:id="@+id/strip_three"
            android:layout_width="60dp"
            android:layout_height="3dp"
            android:layout_below="@id/clinical_information_title"
            android:layout_marginTop="8dp"
            android:background="@color/text_blue" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/reason_for_referral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/strip_three"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/referral_reason"
            android:textColor="@color/primary_text"
            android:textSize="14sp" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/appointment_date_title"
            style="@style/CustomFontTextViewStyle.ClientList.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reason_for_referral"
            android:layout_marginTop="8dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/appointment_date_label"
            android:textColor="@color/text_blue"
            android:textSize="14sp" />

        <View
            android:id="@+id/strip_six"
            android:layout_width="60dp"
            android:layout_height="3dp"
            android:layout_below="@id/appointment_date_title"
            android:layout_marginTop="8dp"
            android:background="@color/text_blue" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/appointment_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/strip_six"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/primary_text"
            android:textSize="14sp" />

    </RelativeLayout>

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/service_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:paddingTop="16dp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/details"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="#000" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/service_background"
        style="@style/CustomFontTextViewStyle.ClientList.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:alpha="0.1"
        android:rotation="-45"
        android:text="HIV"
        android:textColor="@color/text_blue"
        android:textSize="100sp"
        android:textStyle="bold" />

</RelativeLayout>